ms-ui-rdv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: khalibad/ms-ui-rdv:0.0.2
        ports:
        - containerPort: 8000
